fixed menu collapse

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -101,7 +101,7 @@
   .theBtn{
     background:#15c0f1;
     border-color:#15c0f1;
-    color:white;
+    color:white !important;
   }
 
   .theBtn:hover { background:white;
